Update pom.